ui/single/task-priority-too-high.stderr
warning: unused import: `rtfm::app`
 --> $DIR/task-priority-too-high.rs:3:5
  |
3 | use rtfm::app;
  |     ^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

error[E0080]: evaluation of constant value failed
 --> $DIR/task-priority-too-high.rs:5:1
  |
5 | #[rtfm::app(device = lm3s6965)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to subtract with overflow
